--- a/app/views/home/about.jade
+++ b/app/views/home/about.jade
@@ -24,4 +24,4 @@ block content
                         li
                             |微信：lingyong1992
                         li
-                            |邮箱：lingyong1992@foxmail.com
+                            |邮箱：hi@lingyong.me
