--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -14,23 +14,21 @@ body{
 }
 
 #scrollUp {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
   bottom: 20px;
   right: 20px;
-  background-color: #555;
+  line-height: 50px;
+  padding-left: 11px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.3);
   color: #fff;
-  font-size: 12px;
-  font-family: sans-serif;
-  text-decoration: none;
-  opacity: .9;
-  padding: 10px 20px;
-  -webkit-border-radius: 16px;
-  -moz-border-radius: 16px;
-  border-radius: 16px;
-  -webkit-transition: background 200ms linear;
-  -moz-transition: background 200ms linear;
-  -o-transition: background 200ms linear;
-  transition: background 200ms linear;
-  -webkit-backface-visibility: hidden;
+  &:hover{
+    text-decoration: none;
+    color: #49a3df;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
 }
 
 #scrollUp:hover {
