change the blog pre css

--- a/public/stylesheets/blog/eachblog.less
+++ b/public/stylesheets/blog/eachblog.less
@@ -50,7 +50,7 @@ body{
       p{
         margin-top: 20px;
       }
-      font-size: 16px;
+      font-size: @eachblog-font-size;
     }
     .blog-footer{
       .tags{
