--- a/public/stylesheets/amd/markdown.less
+++ b/public/stylesheets/amd/markdown.less
@@ -1,21 +1,27 @@
-pre,
-code {
-  font-family: Monaco, Menlo, Consolas, "Courier New", Courier, "Liberation Mono";
+@import "../variable";
+
+pre, code {
+  font-family: Monaco,Menlo,Consolas,"Courier New",Courier,"Liberation Mono";
   font-size: 0.90em;
   border-radius: 0 2px 2px 0;
-  background-color: #fafafa;
+  background-color: rgb(250,250,250);
+  
 }
+
 pre {
   white-space: pre;
+  white-space: pre-wrap;
   white-space: pre-wrap;
   word-wrap: break-word;
   padding: 6px;
   border-left-width: 3px;
-  border-left-color: #3eb6dc;
+  border-left-color: rgb(62, 182, 220);
 }
+
 code {
   padding: 0 3px;
 }
+
 pre code {
   display: block;
   padding: 0.5em;
@@ -23,6 +29,7 @@ pre code {
   background: transparent !important;
   line-height: 1.4em;
 }
+
 pre code,
 pre .subst,
 pre .tag .title,
@@ -31,6 +38,7 @@ pre .clojure .built_in,
 pre .nginx .title {
   color: black;
 }
+
 pre .string,
 pre .title,
 pre .constant,
@@ -57,6 +65,7 @@ pre .erlang_repl .function_or_atom,
 pre .markdown .header {
   color: #800;
 }
+
 pre .comment,
 pre .annotation,
 pre .template_comment,
@@ -65,6 +74,7 @@ pre .chunk,
 pre .markdown .blockquote {
   color: #888;
 }
+
 pre .number,
 pre .date,
 pre .regexp,
@@ -77,6 +87,7 @@ pre .markdown .bullet,
 pre .markdown .link_url {
   color: #080;
 }
+
 pre .label,
 pre .javadoc,
 pre .ruby .string,
@@ -103,6 +114,7 @@ pre .clojure .attribute,
 pre .coffeescript .property {
   color: #88F;
 }
+
 pre .keyword,
 pre .id,
 pre .phpdoc,
@@ -124,13 +136,16 @@ pre .request,
 pre .status {
   font-weight: bold;
 }
+
 pre .markdown .emphasis,
 pre .comment {
   font-style: italic;
 }
+
 pre .nginx .built_in {
   font-weight: normal;
 }
+
 pre .coffeescript .javascript,
 pre .javascript .xml,
 pre .tex .formula,
@@ -140,30 +155,38 @@ pre .xml .css,
 pre .xml .cdata {
   opacity: 0.5;
 }
+
 em {
   font-style: italic;
 }
+
 strong em {
   font-weight: bold;
 }
+
 p {
-  font-size: 15px;
+  font-size: @eachblog-font-size;
 }
+
 img {
   max-width: 100%;
   border: 0;
+
   vertical-align: top;
 }
+
 h2 {
   border-bottom: 1px solid silver;
   padding-bottom: 5px;
 }
+
 blockquote {
   color: #666666;
   margin: 0;
   padding-left: 3em;
   border-left: 0.5em #EEE solid;
 }
+
 hr {
   display: block;
   height: 2px;
@@ -173,76 +196,88 @@ hr {
   margin: 1em 0;
   padding: 0;
 }
-ul,
-ol {
+
+ul, ol {
   margin: 1em 0;
   padding: 0 0 0 2em;
 }
+
 ul {
   list-style-type: disc;
 }
+
 ol {
   list-style-type: decimal;
 }
+
 li p:last-child {
   margin: 0;
 }
+
 dd {
   margin: 0 0 0 2em;
 }
-sub,
-sup {
+
+sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
 }
+
 sup {
   top: -0.5em;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-td,
-th {
+
+td, th {
   vertical-align: top;
   padding: 4px 10px;
   border: 1px solid #bbb;
 }
-tr:nth-child(even) td,
-tr:nth-child(even) th {
+
+tr:nth-child(even) td, tr:nth-child(even) th {
   background: #eee;
 }
-.amd-center,
-.amd-left,
-.amd-right {
+
+.amd-center, .amd-left, .amd-right {
   display: block;
 }
+
 .amd-center {
   margin: 20px auto;
 }
+
 .amd-left {
   float: left;
   margin-top: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
 }
+
 .amd-right {
   float: right;
   margin-top: 20px;
   margin-left: 20px;
   margin-bottom: 20px;
 }
+
 .amd-tleft {
   text-align: left;
 }
+
 .amd-tcenter {
   text-align: center;
 }
+
 .amd-tright {
   text-align: right;
 }
