--- a/app/views/blog/perBlog.jade
+++ b/app/views/blog/perBlog.jade
@@ -38,10 +38,10 @@ block scripts
     script.
              /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 
-                    var disqus_shortname = 'qorablog'; // required: replace example with your forum shortname
+                    var disqus_shortname = 'lingyong'; // required: replace example with your forum shortname
                     var disqus_identifier = '#{blog._id}';
                     var disqus_title = '#{blog.title}';
-                    var disqus_url = 'http://blog.qora.club/blog/#{blog._id}';
+                    var disqus_url = 'http://lingyong.me/blog/#{blog._id}';
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                     (function() {
