--- a/app/views/cover/eachcover.jade
+++ b/app/views/cover/eachcover.jade
@@ -35,10 +35,10 @@ block scripts
     script(src='/javascripts/home/index.js')
     script.
      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'qorablog'; // required: replace example with your forum shortname
+            var disqus_shortname = 'lingyong'; // required: replace example with your forum shortname
             var disqus_identifier = '#{cover._id}';
          var disqus_title = '#{cover.title}';
-             var disqus_url = 'http://blog.qora.club/cover/#{cover._id}';
+             var disqus_url = 'http://lingyong.me/cover/#{cover._id}';
 
          /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
