--- a/public/stylesheets/cover/eachcover.css
+++ b/public/stylesheets/cover/eachcover.css
@@ -75,6 +75,9 @@ body {
 .cover-content p {
   margin: 15px 0px;
 }
+.cover-content img {
+  max-width: 100%;
+}
 .comment {
   padding-top: 30px;
   max-width: 900px;
