--- a/public/stylesheets/bootstrap_less/bootstrap.css
+++ b/public/stylesheets/bootstrap_less/bootstrap.css
@@ -881,7 +881,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", "\5FAE\8F6F\96C5\9ED1";
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
