--- a/public/stylesheets/home/login.css
+++ b/public/stylesheets/home/login.css
@@ -3,6 +3,10 @@ body {
 }
 #mynav {
   border-bottom: none;
+  background: transparent!important;
+}
+#mynav li > a {
+  color: #ffffff;
 }
 .form-reg {
   max-width: 330px;
@@ -16,10 +20,9 @@ body {
 .form-reg button {
   border-radius: 0;
   margin-top: 20px;
-  background-color: #B155DF;
-}
-.form-reg button:hover {
-  background-color: #BE72E4;
+  background-color: #6495ed;
+  border: none;
+  height: 40px;
 }
 .form-reg input[type="text"],
 .form-reg input[type='email'],
@@ -30,13 +33,18 @@ body {
   padding: 10px;
   border: none;
   border-radius: 0;
+  width: 100%;
 }
 .formwrapper {
   margin-top: 80px;
-  min-height: 500px;
 }
 .form-reg input[type="text"]:focus,
 .form-reg input[type='email']:focus,
 .form-reg input[type="password"]:focus {
   z-index: 2;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
