--- a/public/stylesheets/home/login.less
+++ b/public/stylesheets/home/login.less
@@ -1,9 +1,15 @@
+
 body{
   background-image: url('/images/bg.jpg')!important;
 
 }
 #mynav{
   border-bottom: none;
+  background: transparent!important;
+  li>a{
+    color: rgba(255,255,255,1);
+  }
+
 }
 .form-reg{
   max-width: 330px;
@@ -17,11 +23,11 @@ body{
 .form-reg button{
   border-radius: 0;
   margin-top: 20px;
-  background-color: #B155DF;
+  background-color: #6495ed;
+  border: none;
+  height: 40px;
 }
-.form-reg button:hover{
-  background-color: #BE72E4;
-}
+
 
 
 .form-reg input[type="text"],
@@ -33,17 +39,23 @@ body{
   padding: 10px;
   border: none;
   border-radius: 0;
+  width: 100%;
 }
 
  .formwrapper{
   margin-top: 80px;
-  min-height: 500px;
+  //min-height: 500px;
 }
 .form-reg input[type="text"]:focus,
 .form-reg input[type='email']:focus,
 .form-reg input[type="password"]:focus {
   z-index: 2;
 
+}
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 
