--- a/public/stylesheets/bootstrap_less/bootstrap.css
+++ b/public/stylesheets/bootstrap_less/bootstrap.css
@@ -7734,7 +7734,7 @@ button.close {
 @media screen and (min-width: 768px) {
   #mynav {
     background-color: rgba(255, 255, 255, 0.9);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px groove rgba(0, 0, 0, 0.05);
   }
   #mynav li > a {
     color: rgba(0, 0, 0, 0.7);
