--- a/public/stylesheets/home/mybloglist.less
+++ b/public/stylesheets/home/mybloglist.less
@@ -17,10 +17,16 @@ body
      }
      tbody{
 
+       tr{
+         height: 46px;
+         overflow: hidden;
+       }
        th{
          text-align: center;
          padding: 0;
-         line-height: 45px;
+         line-height: 46px;
+         height: 46px;
+
          .btn{
            border-radius: 0;
          }
